Contact btn fixed

--- a/contact.html
+++ b/contact.html
@@ -121,14 +121,14 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" class="contact_content-form--input" id="name" name="name"
+                                            <input type="text" class="contact_content-form--input" id="lastname" name="lastname"
                                                 placeholder="Nom">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" class="contact_content-form--input" id="prenom"
-                                                name="prenom" placeholder="Prenom">
+                                            <input type="text" class="contact_content-form--input" id="name"
+                                                name="name" placeholder="Prenom">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -163,7 +163,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="contact_content-form--textarea" id="commentaire" name="commentaire"
+                                    <textarea class="contact_content-form--textarea" id="message" name="message"
                                         rows="5" placeholder="Message"></textarea>
                                 </div>
                                 <div class="form-group">
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-start">
-                            <button disabled type="submit" class="col-md-6 contact_content-form--btn form-submit"
+                            <button type="submit" class="col-md-6 contact_content-form--btn form-submit"
                                 value="Submit">ENVOYER</button>
                         </div>
                     </form>
