--- a/message-envoye.html
+++ b/message-envoye.html
@@ -85,13 +85,15 @@
 
     
 
-    <div class="">
-        <p class="alert alert-success">
-    Votre formulaire a bien été envoyé.<br>
-    Vous serez recontacté aussi rapidement que possible&nbsp;!
-</p>
-<a href="./index.html">Retour sur la page d'accueil</a>
+<div class="my-5 py-5">
+    <div class="container">
+        <p class="alert alert-success cards_card-content--p pb-5 mb-5">
+            Votre formulaire a bien été envoyé.<br>
+            Vous serez recontacté aussi rapidement que possible&nbsp;!
+        </p>
+        <a href="{% link accueil.html %}" class="menu_content-btn menu_content-btn--2">Retour sur la page d'accueil</a>
     </div>
+</div>
 
     <footer class="footer">
         <div class="container-fluid">
