--- a/formulaire-succes.html
+++ b/formulaire-succes.html
@@ -19,14 +19,14 @@
 <meta name="description" content="" />
 <meta property="og:description" content="" />
 <meta name="keywords" content="" />
-<link rel="canonical" href="http://localhost:4000/message-envoye" />
-<meta property="og:url" content="http://localhost:4000/message-envoye" />
+<link rel="canonical" href="http://localhost:4000/formulaire-succes" />
+<meta property="og:url" content="http://localhost:4000/formulaire-succes" />
 <meta property="og:site_name" content="BHInternet" />
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"WebSite",
-"url":"http://localhost:4000/message-envoye",
+"url":"http://localhost:4000/formulaire-succes",
 "description":"",
 "name":""
 }
