--- a/formulaire-succes.html
+++ b/formulaire-succes.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-expand-lg fixedNav">
         <div class="container-fluid">
             <div class="Navbar_image">
-                <a href="./accueil.html"><img src="./assets/img/logo.png" class="Navbar_image-img"
+                <a href="./index.html"><img src="./assets/img/logo.png" class="Navbar_image-img"
                         alt="" /></a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -58,7 +58,7 @@
             <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
                 <ul class="navbar-nav Navbar_nav ml-auto">
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./accueil.html"> Accueil</a>
+                        <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
                         <a class="nav-link Navbar_nav-link" href="./quiSommesNous.html"> Qui sommes nous ?</a>
@@ -91,7 +91,7 @@
             Votre formulaire a bien été envoyé.<br>
             Vous serez recontacté aussi rapidement que possible&nbsp;!
         </p>
-        <a href="{% link accueil.html %}" class="menu_content-btn menu_content-btn--2">Retour sur la page d'accueil</a>
+        <a href="./index.html" class="menu_content-btn menu_content-btn--2">Retour sur la page d'accueil</a>
     </div>
 </div>
 
