--- a/vrd.html
+++ b/vrd.html
@@ -45,43 +45,43 @@
 </head>
   <body>
     <section class="navbar-main ">
-        <nav class="navbar navbar-expand-lg fixedNav">
-            <div class="container-fluid">
-                <div class="Navbar_image">
-                    <a href="./index.html"><img src="./assets/img/logo.png" class="Navbar_image-img"
-                            alt="" /></a>
-                </div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-bars fa-2x toggle-button" aria-hidden="true"></i>
-                </button>
-                <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
-                    <ul class="navbar-nav Navbar_nav ml-auto">
-                        <li class="nav-item Navbar_nav-item">
-                            <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
-                        </li>
-                        <li class="nav-item Navbar_nav-item">
-                            <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Qui sommes nous ?</a>
-                        </li>
-                        <li class="nav-item dropdown Navbar_nav-item">
-                            <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
-                                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false"> Nos services
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item Navbar_nav-link" href="./demolition.html"> Demolition</a>
-                                <a class="dropdown-item Navbar_nav-link" href="./vrd.html">VRD</a>
-                                <a class="dropdown-item Navbar_nav-link" href="./location.html">Location</a>
-                            </div>
-                        </li>
-                        <li class="nav-item Navbar_nav-item">
-                            <a class="nav-link Navbar_nav-btn" href="./contact.html"> Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-lg fixedNav">
+        <div class="container-fluid">
+            <div class="Navbar_image">
+                <a href="./index.html"><img src="./assets/img/logo.png" class="Navbar_image-img"
+                        alt="" /></a>
             </div>
-        </nav>
-    </section>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars fa-2x toggle-button" aria-hidden="true"></i>
+            </button>
+            <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
+                <ul class="navbar-nav Navbar_nav ml-auto">
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Qui sommes nous ?</a>
+                    </li>
+                    <li class="nav-item dropdown Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
+                            id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false"> Nos services
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item Navbar_nav-link" href="./demolition.html"> Demolition</a>
+                            <a class="dropdown-item Navbar_nav-link" href="./vrd.html">VRD</a>
+                            <a class="dropdown-item Navbar_nav-link" href="./location.html">Location</a>
+                        </div>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-btn" href="./contact.html"> Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
 
     
 
@@ -160,75 +160,75 @@
     </div>
 </section>
     </div>
+
     <footer class="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="footer_logo">
-                        <a href="./index.html "><img src="./assets/img/logo.png" class="Navbar_image-img footer_logo-img"
-                            alt="" /></a>
-                    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="footer_logo">
+                    <a href="./index.html"><img src="./assets/img/logo.png" class="Navbar_image-img footer_logo-img"
+                        alt="" /></a>
                 </div>
-                <div class="col-md-3">
-                    <div class="footer_content">
-                        <h3 class="footer_content-title">Liens utiles</h3>
-                        <ul class="footer_content-ul">
-                            <li class="footer_content-li">
-                                <a href="./index.html " class="footer_content-li--link">Accueil</a>
-                            </li>
-                            <li class="footer_content-li">
-                                <a href="./qui-sommes-nous.html " class="footer_content-li--link">Qui sommes-nous ?</a>
-                            </li>
-                            <li class="footer_content-li">
-                                <a href="./contact.html " class="footer_content-li--link">Contact</a>
-                            </li>
-                            <li class="footer_content-li">
-                                <a href="./mentions-legales.html" class="footer_content-li--link">Mentions Légales</a>
-                            </li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer_content">
+                    <h3 class="footer_content-title">Liens utiles</h3>
+                    <ul class="footer_content-ul">
+                        <li class="footer_content-li">
+                            <a href="./index.html" class="footer_content-li--link">Accueil</a>
+                        </li>
+                        <li class="footer_content-li">
+                            <a href="./qui-sommes-nous.html" class="footer_content-li--link">Qui sommes-nous ?</a>
+                        </li>
+                        <li class="footer_content-li">
+                            <a href="./contact.html" class="footer_content-li--link">Contact</a>
+                        </li>
+                        <li class="footer_content-li">
+                            <a href="./mentions-legales.html" class="footer_content-li--link">Mentions Légales</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-3">
-                    <div class="footer_content">
-                        <h3 class="footer_content-title">Nos services</h3>
-                        <ul class="footer_content-ul">
-                            <li class="footer_content-li">
-                                <a href="./demolition.html" class="footer_content-li--link">Démolition</a>
-                            </li>
-                            <li class="footer_content-li">
-                                <a href="./vrd.html" class="footer_content-li--link">VRD</a>
-                            </li>
-                            <li class="footer_content-li">
-                                <a href="./location.html" class="footer_content-li--link">Location</a>
-                            </li>
-                        </ul>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer_content">
+                    <h3 class="footer_content-title">Nos services</h3>
+                    <ul class="footer_content-ul">
+                        <li class="footer_content-li">
+                            <a href="./demolition.html" class="footer_content-li--link">Démolition</a>
+                        </li>
+                        <li class="footer_content-li">
+                            <a href="./vrd.html" class="footer_content-li--link">VRD</a>
+                        </li>
+                        <li class="footer_content-li">
+                            <a href="./location.html" class="footer_content-li--link">Location</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-3">
-                    <div class="footer_content">
-                        <h3 class="footer_content-title">Contact</h3>
-                        <ul class="footer_content-ul">
-                            <li class="footer_content-li">
-                                Mail: &nbsp; <a href="mailto:contact@dit77.fr" class="footer_content-li--link underline"> contact@dit77.fr</a>
-                            </li>
-                            <li class="footer_content-li">
-                                Tel: &nbsp; <a href="tel:contact@dit77.fr" class="footer_content-li--link underline"> 06 69 70 77 11</a>
-                            </li>
-                        </ul>
-                        <div class="footer_content-social">
-                            <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="./assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
-                            <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="./assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
-                        </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer_content">
+                    <h3 class="footer_content-title">Contact</h3>
+                    <ul class="footer_content-ul">
+                        <li class="footer_content-li">
+                            Mail: &nbsp; <a href="mailto:contact@dit77.fr" class="footer_content-li--link underline"> contact@dit77.fr</a>
+                        </li>
+                        <li class="footer_content-li">
+                            Tel: &nbsp; <a href="tel:contact@dit77.fr" class="footer_content-li--link underline"> 06 69 70 77 11</a>
+                        </li>
+                    </ul>
+                    <div class="footer_content-social">
+                        <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="../assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
+                        <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="../assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
 
 <script src="./assets/js/index.js"></script>
-<script src="./assets/js/formSubmit.js"></script>    
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="./assets/js/formSubmit.js"></script>
 <script defer src="./assets/js/popper.min.js"></script>
 <script defer src="./assets/js/bootstrap.min.js"></script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
