--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="email" class="contact_content-form--input" id="ville"
+                                            <input type="text" class="contact_content-form--input" id="ville"
                                                 name="ville" placeholder="Ville">
                                         </div>
                                     </div>
