--- a/formulaire-succes.html
+++ b/formulaire-succes.html
@@ -92,7 +92,7 @@
             Votre formulaire a bien été envoyé.<br>
             Vous serez recontacté aussi rapidement que possible&nbsp;!
         </p>
-        <a href="/" class="menu_content-btn menu_content-btn--2">Retour sur la page d'accueil</a>
+        <a href="./index.html" class="menu_content-btn menu_content-btn--2">Retour sur la page d'accueil</a>
     </div>
 </div>
     </div>
