--- a/vrd.html
+++ b/vrd.html
@@ -61,18 +61,27 @@
                         <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Qui sommes nous ?</a>
+                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Nos services</a>
                     </li>
-                    <li class="nav-item dropdown Navbar_nav-item">
+                    <!-- <li class="nav-item dropdown Navbar_nav-item">
                         <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
                             id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> Nos services
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item Navbar_nav-link" href="./demolition.html"> Demolition</a>
-                            <a class="dropdown-item Navbar_nav-link" href="./vrd.html">VRD</a>
-                            <a class="dropdown-item Navbar_nav-link" href="./location.html">Location</a>
+                            <a class="dropdown-item Navbar_nav-link" href=""> </a>
+                            <a class="dropdown-item Navbar_nav-link" href=""></a>
+                            <a class="dropdown-item Navbar_nav-link" href=""></a>
                         </div>
+                    </li> -->
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./demolition.html">Demolition</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./vrd.html">VRD</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./location.html">Location</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
                         <a class="nav-link Navbar_nav-btn" href="./contact.html"> Contact</a>
@@ -178,13 +187,13 @@
                             <a href="./index.html" class="footer_content-li--link">Accueil</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./qui-sommes-nous.html" class="footer_content-li--link">Qui sommes-nous ?</a>
+                            <a href="./qui-sommes-nous.html" class="footer_content-li--link">Nos Services</a>
                         </li>
                         <li class="footer_content-li">
                             <a href="./contact.html" class="footer_content-li--link">Contact</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./mentions-legales.html" class="footer_content-li--link">Mentions Légales</a>
+                            <a href="./mentionsLegales.html" class="footer_content-li--link">Mentions Légales</a>
                         </li>
                     </ul>
                 </div>
@@ -217,8 +226,8 @@
                         </li>
                     </ul>
                     <div class="footer_content-social">
-                        <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="../assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
-                        <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="../assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
+                        <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="./assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
+                        <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="./assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
                     </div>
                 </div>
             </div>
