--- a/location.html
+++ b/location.html
@@ -61,18 +61,27 @@
                         <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Qui sommes nous ?</a>
+                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html"> Nos services</a>
                     </li>
-                    <li class="nav-item dropdown Navbar_nav-item">
+                    <!-- <li class="nav-item dropdown Navbar_nav-item">
                         <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
                             id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> Nos services
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item Navbar_nav-link" href="./demolition.html"> Demolition</a>
-                            <a class="dropdown-item Navbar_nav-link" href="./vrd.html">VRD</a>
-                            <a class="dropdown-item Navbar_nav-link" href="./location.html">Location</a>
+                            <a class="dropdown-item Navbar_nav-link" href=""> </a>
+                            <a class="dropdown-item Navbar_nav-link" href=""></a>
+                            <a class="dropdown-item Navbar_nav-link" href=""></a>
                         </div>
+                    </li> -->
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./demolition.html">Demolition</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./vrd.html">VRD</a>
+                    </li>
+                    <li class="nav-item Navbar_nav-item">
+                        <a class="nav-link Navbar_nav-link" href="./location.html">Location</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
                         <a class="nav-link Navbar_nav-btn" href="./contact.html"> Contact</a>
@@ -90,7 +99,7 @@
     <div class="container-fluid">
         <div class="banner_content">
             <h1 class="banner_content-title">
-                La location : une alternative aux lourds investissements en matériel !
+                La location avec chauffeur : une alternative aux lourds investissements en matériel !
             </h1>
         </div>
     </div>
@@ -181,7 +190,7 @@
                             </p>
                         </div>
                         <div class="cards_card-content--button">
-                            <a href="./contact.html" class="cards_card-content--btn">En savoir plus</a>
+                            <a href="#" class="cards_card-content--btn">En savoir plus</a>
                         </div>
                     </div>
                 </div>
@@ -208,13 +217,13 @@
                             <a href="./index.html" class="footer_content-li--link">Accueil</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./qui-sommes-nous.html" class="footer_content-li--link">Qui sommes-nous ?</a>
+                            <a href="./qui-sommes-nous.html" class="footer_content-li--link">Nos Services</a>
                         </li>
                         <li class="footer_content-li">
                             <a href="./contact.html" class="footer_content-li--link">Contact</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./mentions-legales.html" class="footer_content-li--link">Mentions Légales</a>
+                            <a href="./mentionsLegales.html" class="footer_content-li--link">Mentions Légales</a>
                         </li>
                     </ul>
                 </div>
@@ -247,8 +256,8 @@
                         </li>
                     </ul>
                     <div class="footer_content-social">
-                        <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="../assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
-                        <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="../assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
+                        <a href="https://www.facebook.com/SarlDIT/" class="" target="_blank"><img src="./assets/img/facebook.png" class="footer_content-social--img" alt="" /></a>
+                        <a href="https://instagram.com/demolitionterrassement77?igshid=YmMyMTA2M2Y=" class="" target="_blank"><img src="./assets/img/instagram.png" class="footer_content-social--img" alt="" /></a>
                     </div>
                 </div>
             </div>
